--- a/_locales/zh-TW/matrixLidarDistance-strings.json
+++ b/_locales/zh-TW/matrixLidarDistance-strings.json
@@ -15,6 +15,5 @@
   "matrixLidarDistance.matrixPointOutput|block": "指定點 x: %x y: %y",
   "matrixLidarDistance.obstacleSuggestion|block": "獲取建議方向",
   "matrixLidarDistance.setObstacleDistance|block": "避障距離設置 $distance",
-  "matrixLidarDistance|block": "矩陣式激光雷達測距傳感器",
-  "{id:category}MatrixLidarDistance": "矩陣激光測距"
+  "matrixLidarDistance|block": "矩陣激光測距"
 }
