--- a/_locales/zh-CN/matrixLidarDistance-strings.json
+++ b/_locales/zh-CN/matrixLidarDistance-strings.json
@@ -10,10 +10,10 @@
   "matrixLidarDistance.ObstacleSide.Right|block": "右侧",
   "matrixLidarDistance.emergencyWarning|block": "获取避险警告",
   "matrixLidarDistance.getData|block": "获取避障数据",
-  "matrixLidarDistance.getObstacleDistance|block": "距离检测 %side",
+  "matrixLidarDistance.getObstacleDistance|block": "距离检测 %side cm",
   "matrixLidarDistance.initialize|block": "初始化激光测距传感器 I2C地址 $address",
-  "matrixLidarDistance.matrixPointOutput|block": "指定点 x: %x y: %y",
+  "matrixLidarDistance.matrixPointOutput|block": "指定点 x: %x y: %y 的距离(cm)",
   "matrixLidarDistance.obstacleSuggestion|block": "获取建议方向",
-  "matrixLidarDistance.setObstacleDistance|block": "避障距离设置 $distance",
+  "matrixLidarDistance.setObstacleDistance|block": "避障距离设置 $distance cm",
   "matrixLidarDistance|block": "矩阵激光测距"
 }
