--- a/_locales/zh-TW/matrixLidarDistance-strings.json
+++ b/_locales/zh-TW/matrixLidarDistance-strings.json
@@ -10,10 +10,10 @@
   "matrixLidarDistance.ObstacleSide.Right|block": "右側",
   "matrixLidarDistance.emergencyWarning|block": "獲取避險警告",
   "matrixLidarDistance.getData|block": "獲取避障數據",
-  "matrixLidarDistance.getObstacleDistance|block": "距離檢測 %side",
+  "matrixLidarDistance.getObstacleDistance|block": "距離檢測 %side cm",
   "matrixLidarDistance.initialize|block": "初始化激光測距傳感器 I2C地址 $address",
-  "matrixLidarDistance.matrixPointOutput|block": "指定點 x: %x y: %y",
+  "matrixLidarDistance.matrixPointOutput|block": "指定點 x: %x y: %y 的距離(cm)",
   "matrixLidarDistance.obstacleSuggestion|block": "獲取建議方向",
-  "matrixLidarDistance.setObstacleDistance|block": "避障距離設置 $distance",
+  "matrixLidarDistance.setObstacleDistance|block": "避障距離設置 $distance cm",
   "matrixLidarDistance|block": "矩陣激光測距"
 }
