更新 matrixLidarDistance.ts, _locales/en/matrixLidarDistance-strings.json, _locales/zh-CN/matrixLidarDistance-strings.json, _locales/zh-TW/matrixLidarDistance-strings.json

--- a/_locales/en/matrixLidarDistance-strings.json
+++ b/_locales/en/matrixLidarDistance-strings.json
@@ -12,7 +12,7 @@
   "matrixLidarDistance.getData|block": "Get obstacle avoidance data",
   "matrixLidarDistance.getObstacleDistance|block": "Distance detection %side",
   "matrixLidarDistance.initialize|block": "Initialize Matrix LiDAR Distance sensor I2C address $address $matrix",
-  "matrixLidarDistance.matrixPointOutput|block": "Specified point x: %x y: %y distance (cm)",
+  "matrixLidarDistance.matrixPointOutput|block": "Specified point x: %x y: %y distance (mm)",
   "matrixLidarDistance.obstacleSuggestion|block": "Get suggested direction",
   "matrixLidarDistance.setObstacleDistance|block": "Set obstacle avoidance distance $distance",
   "matrixLidarDistance|block": "Matrix LiDAR Distance"
