更新 pxt.json, matrixLidarDistance.ts, _locales/en/matrixLidarDistance-strings.json, _locales/en/matrixLidarDistance-jsdoc-strings.json, _locales/zh-CN/matrixLidarDistance-strings.json, _locales/zh-CN/matrixLidarDistance-jsdoc-strings.json, _locales/zh-TW/matrixLidarDistance-strings.json, _locales/zh-TW/matrixLidarDistance-jsdoc-strings.json

--- a/_locales/en/matrixLidarDistance-strings.json
+++ b/_locales/en/matrixLidarDistance-strings.json
@@ -8,12 +8,12 @@
   "matrixLidarDistance.ObstacleSide.Front|block": "Front",
   "matrixLidarDistance.ObstacleSide.Left|block": "Left",
   "matrixLidarDistance.ObstacleSide.Right|block": "Right",
-  "matrixLidarDistance.emergencyWarning|block": "Get hazard warning",
-  "matrixLidarDistance.getData|block": "Get obstacle avoidance data",
-  "matrixLidarDistance.getObstacleDistance|block": "Distance detection %side",
-  "matrixLidarDistance.initialize|block": "Initialize Matrix LiDAR Distance sensor I2C address $address $matrix",
-  "matrixLidarDistance.matrixPointOutput|block": "Specified point x: %x y: %y distance (mm)",
-  "matrixLidarDistance.obstacleSuggestion|block": "Get suggested direction",
-  "matrixLidarDistance.setObstacleDistance|block": "Set obstacle avoidance distance $distance",
+  "matrixLidarDistance.emergencyWarning|block": "Warn for close range within 100 mm.",
+  "matrixLidarDistance.getData|block": "Acquire obstacle avoidance data",
+  "matrixLidarDistance.getObstacleDistance|block": "Distance detection in obstacle avoidance mode %side (mm)",
+  "matrixLidarDistance.initialize|block": "Initialize the I2C address $address of the laser ranging sensor in $matrix matrix mode",
+  "matrixLidarDistance.matrixPointOutput|block": "Measure the distance of the specified point in matrix mode x: %x y: %y (mm)",
+  "matrixLidarDistance.obstacleSuggestion|block": "Direction indication in obstacle avoidance mode",
+  "matrixLidarDistance.setObstacleDistance|block": "Customize the obstacle avoidance distance to $distance (mm)",
   "matrixLidarDistance|block": "Matrix LiDAR Distance"
 }
