--- a/_locales/en/matrixLidarDistance-jsdoc-strings.json
+++ b/_locales/en/matrixLidarDistance-jsdoc-strings.json
@@ -1,13 +1,13 @@
 {
-  "matrixLidarDistance.emergencyWarning": "Check if the detected distance value has reached the critical distance for an imminent collision, which is a fixed value of 10cm. If this distance is detected, issue a warning.",
-  "matrixLidarDistance.getData": "Get obstacle avoidance data",
-  "matrixLidarDistance.getObstacleDistance": "By the system's comprehensive calculation, the distance values of obstacles in the current left, center, and right directions are detected in real time.",
+  "matrixLidarDistance.emergencyWarning": "When an obstacle within 100 mm is detected, it will output 1; otherwise, it will output 0.",
+  "matrixLidarDistance.getData": "Acquire the obstacle avoidance related data that has undergone comprehensive internal calculations once. The matrix mode needs to be set to the 4*4 mode. The 8*8 mode will cause data errors or no data.",
+  "matrixLidarDistance.getObstacleDistance": "The black is operating in the obstacle avoidance mode. The data has undergone comprehensive calculations inside on the matrix laser data. It can detect the obstacle situations in the left, middle and right directions, which is convenient for flexible applications.  The matrix mode needs to be set to the 4*4 mode. The 8*8 mode will cause data errors or no data.",
   "matrixLidarDistance.getObstacleDistance|param|side": "to side ,eg: ObstacleSide.Left",
-  "matrixLidarDistance.initialize": "Initialize Matrix LiDAR Distance sensor",
-  "matrixLidarDistance.matrixPointOutput": "Specify one of the point output data, which is used to simplify the difficulty of project development and reduce the amount of data.",
+  "matrixLidarDistance.initialize": "Initialize the I2C configuration and matrix mode configuration of the sensor. In the obstacle avoidance mode, only the 4*4 mode is supported in order to increase the frame rate.",
+  "matrixLidarDistance.matrixPointOutput": "The black is an independent one working in the matrix mode. It supports both 4*4 and 8*8 modes. It can read the distance values detected by any of the 64 laser beams.",
   "matrixLidarDistance.matrixPointOutput|param|x": "to x ,eg: 3",
   "matrixLidarDistance.matrixPointOutput|param|y": "to y ,eg: 3",
-  "matrixLidarDistance.obstacleSuggestion": "The API will provide steering suggestions for the car based on the data detected in front of the vehicle.",
-  "matrixLidarDistance.setObstacleDistance": "For the setting of obstacle avoidance distance, the sensor will make suggestions for obstacle avoidance based on the distance value of detecting obstacles in front of it.",
+  "matrixLidarDistance.obstacleSuggestion": "According to the settings of \"customized obstacle avoidance distance\", when an obstacle is detected in front, prompt the possible passing directions. Return values: 1 for the left side, 2 for the right side, 3 for the front.",
+  "matrixLidarDistance.setObstacleDistance": "Customize the distance value of the obstacle that triggers the \"direction indication\". Since the laser sensor has a detection range of 60 degrees and some laser beams may be directed towards the ground, when it is used on MaqueenPlus, the maximum set distance should not exceed 200 mm, otherwise the ground may be detected, resulting in incorrect data. It is also possible to avoid the laser beams hitting the ground by increasing the installation distance.",
   "matrixLidarDistance.setObstacleDistance|param|distance": "to distance ,eg: 10"
 }
