--- a/_locales/zh-CN/matrixLidarDistance-strings.json
+++ b/_locales/zh-CN/matrixLidarDistance-strings.json
@@ -8,12 +8,12 @@
   "matrixLidarDistance.ObstacleSide.Front|block": "前方",
   "matrixLidarDistance.ObstacleSide.Left|block": "左侧",
   "matrixLidarDistance.ObstacleSide.Right|block": "右侧",
-  "matrixLidarDistance.emergencyWarning|block": "获取避险警告",
+  "matrixLidarDistance.emergencyWarning|block": "100mm近距离警告",
   "matrixLidarDistance.getData|block": "获取避障数据",
-  "matrixLidarDistance.getObstacleDistance|block": "距离检测 %side cm",
-  "matrixLidarDistance.initialize|block": "初始化激光测距传感器 I2C地址 $address $matrix",
-  "matrixLidarDistance.matrixPointOutput|block": "指定点 x: %x y: %y 的距离(mm)",
-  "matrixLidarDistance.obstacleSuggestion|block": "获取建议方向",
-  "matrixLidarDistance.setObstacleDistance|block": "避障距离设置 $distance cm",
+  "matrixLidarDistance.getObstacleDistance|block": "避障模式 距离检测 %side (mm)",
+  "matrixLidarDistance.initialize|block": "初始化激光测距传感器 I2C地址 $address 矩阵模式 $matrix",
+  "matrixLidarDistance.matrixPointOutput|block": "矩阵模式 指定点测距 x: %x y: %y (mm)",
+  "matrixLidarDistance.obstacleSuggestion|block": "避障模式 方向提示",
+  "matrixLidarDistance.setObstacleDistance|block": "自定义避障距离 $distance（mm）",
   "matrixLidarDistance|block": "矩阵激光测距"
 }
