--- a/_locales/zh-TW/matrixLidarDistance-strings.json
+++ b/_locales/zh-TW/matrixLidarDistance-strings.json
@@ -8,12 +8,12 @@
   "matrixLidarDistance.ObstacleSide.Front|block": "前方",
   "matrixLidarDistance.ObstacleSide.Left|block": "左側",
   "matrixLidarDistance.ObstacleSide.Right|block": "右側",
-  "matrixLidarDistance.emergencyWarning|block": "獲取避險警告",
-  "matrixLidarDistance.getData|block": "獲取避障數據",
-  "matrixLidarDistance.getObstacleDistance|block": "距離檢測 %side cm",
+  "matrixLidarDistance.emergencyWarning|block": "100mm近距離警告",
+  "matrixLidarDistance.getData|block": "獲取避障資料",
+  "matrixLidarDistance.getObstacleDistance|block": "避障模式 距離檢測 %side (mm)",
   "matrixLidarDistance.initialize|block": "初始化激光測距傳感器 I2C地址 $address $matrix",
-  "matrixLidarDistance.matrixPointOutput|block": "指定點 x: %x y: %y 的距離(mm)",
-  "matrixLidarDistance.obstacleSuggestion|block": "獲取建議方向",
-  "matrixLidarDistance.setObstacleDistance|block": "避障距離設置 $distance cm",
+  "matrixLidarDistance.matrixPointOutput|block": "矩陣模式 指定點測距 x: %x y: %y (mm)",
+  "matrixLidarDistance.obstacleSuggestion|block": "避障模式 方向提示",
+  "matrixLidarDistance.setObstacleDistance|block": "自訂避障距離 $distance (mm)",
   "matrixLidarDistance|block": "矩陣激光測距"
 }
