更新 pxt.json, matrixLidarDistance.ts, _locales/en/matrixLidarDistance-strings.json, _locales/zh-CN/matrixLidarDistance-strings.json, _locales/zh-TW/matrixLidarDistance-strings.json

--- a/_locales/en/matrixLidarDistance-strings.json
+++ b/_locales/en/matrixLidarDistance-strings.json
@@ -3,8 +3,8 @@
   "matrixLidarDistance.Addr.Addr2|block": "0x31",
   "matrixLidarDistance.Addr.Addr3|block": "0x32",
   "matrixLidarDistance.Addr.Addr4|block": "0x33",
-  "matrixLidarDistance.Matrix.X4|block": "4 X 4",
-  "matrixLidarDistance.Matrix.X8|block": "8 X 8",
+  "matrixLidarDistance.Matrix.OBS|block": "Obstacle avoidance",
+  "matrixLidarDistance.Matrix.MAT|block": "Matrix",
   "matrixLidarDistance.ObstacleSide.Front|block": "Front",
   "matrixLidarDistance.ObstacleSide.Left|block": "Left",
   "matrixLidarDistance.ObstacleSide.Right|block": "Right",
