--- a/_locales/zh-CN/matrixLidarDistance-strings.json
+++ b/_locales/zh-CN/matrixLidarDistance-strings.json
@@ -3,8 +3,8 @@
   "matrixLidarDistance.Addr.Addr2|block": "0x31",
   "matrixLidarDistance.Addr.Addr3|block": "0x32",
   "matrixLidarDistance.Addr.Addr4|block": "0x33",
-  "matrixLidarDistance.Matrix.X4|block": "4 X 4",
-  "matrixLidarDistance.Matrix.X8|block": "8 X 8",
+  "matrixLidarDistance.Matrix.OBS|block": "避障模式",
+  "matrixLidarDistance.Matrix.MAT|block": "矩阵模式",
   "matrixLidarDistance.ObstacleSide.Front|block": "前方",
   "matrixLidarDistance.ObstacleSide.Left|block": "左侧",
   "matrixLidarDistance.ObstacleSide.Right|block": "右侧",
