--- a/_locales/zh-CN/matrixLidarDistance-strings.json
+++ b/_locales/zh-CN/matrixLidarDistance-strings.json
@@ -14,6 +14,6 @@
   "matrixLidarDistance.initialize|block": "初始化激光测距传感器 I2C地址 $address 矩阵模式 $matrix",
   "matrixLidarDistance.matrixPointOutput|block": "矩阵模式 指定点测距 x: %x y: %y (mm)",
   "matrixLidarDistance.obstacleSuggestion|block": "避障模式 方向提示",
-  "matrixLidarDistance.setObstacleDistance|block": "自定义避障距离 $distance（mm）",
+  "matrixLidarDistance.setObstacleDistance|block": "避障模式自定义避障距离 $distance（mm）",
   "matrixLidarDistance|block": "矩阵激光测距"
 }
