更新 pxt.json, main.blocks, matrixLidarDistance.ts, _locales/en/matrixLidarDistance-strings.json, _locales/zh-CN/matrixLidarDistance-strings.json, _locales/zh-TW/matrixLidarDistance-strings.json, _locales/ko/matrixLidarDistance-strings.json, _locales/de/matrixLidarDistance-strings.json, _locales/es/matrixLidarDistance-strings.json, _locales/fr/matrixLidarDistance-strings.json, _locales/nl/matrixLidarDistance-strings.json, _locales/cs/matrixLidarDistance-strings.json

--- a/_locales/cs/matrixLidarDistance-strings.json
+++ b/_locales/cs/matrixLidarDistance-strings.json
@@ -12,7 +12,7 @@
   "matrixLidarDistance.getData|block": "Získat data o vyhýbání překážkám",
   "matrixLidarDistance.getObstacleDistance|block": "Detekce vzdálenosti v režimu vyhýbání překážkám %side (mm)",
   "matrixLidarDistance.initialize|block": "Inicializovat I2C adresu $address laserového senzoru vzdálenosti v režimu matice $matrix",
-  "matrixLidarDistance.matrixPointOutput|block": "Měřit vzdálenost zadaného bodu v režimu matice x: %x y: %y (mm)",
+  "matrixLidarDistance.matrixPointOutput|block": "$address Měřit vzdálenost zadaného bodu v režimu matice x: %x y: %y (mm)",
   "matrixLidarDistance.obstacleSuggestion|block": "Indikace směru v režimu vyhýbání překážkám",
   "matrixLidarDistance.setObstacleDistance|block": "Přizpůsobit vzdálenost vyhýbání překážkám na $distance (mm)",
   "matrixLidarDistance|block": "Matice LiDAR Vzdálenost"
