--- a/_locales/es/matrixLidarDistance-strings.json
+++ b/_locales/es/matrixLidarDistance-strings.json
@@ -12,7 +12,7 @@
   "matrixLidarDistance.getData|block": "Obtener datos de evasión de obstáculos",
   "matrixLidarDistance.getObstacleDistance|block": "Detección de distancia en modo evasión de obstáculos %side (mm)",
   "matrixLidarDistance.initialize|block": "Inicializar dirección I2C $address del sensor de distancia láser en modo matriz $matrix",
-  "matrixLidarDistance.matrixPointOutput|block": "Medir distancia del punto especificado en modo matriz x: %x y: %y (mm)",
+  "matrixLidarDistance.matrixPointOutput|block": "$address Medir distancia del punto especificado en modo matriz x: %x y: %y (mm)",
   "matrixLidarDistance.obstacleSuggestion|block": "Indicación de dirección en modo evasión de obstáculos",
   "matrixLidarDistance.setObstacleDistance|block": "Personalizar distancia de evasión de obstáculos a $distance (mm)",
   "matrixLidarDistance|block": "Distancia LiDAR Matriz"
