--- a/_locales/fr/matrixLidarDistance-strings.json
+++ b/_locales/fr/matrixLidarDistance-strings.json
@@ -12,7 +12,7 @@
   "matrixLidarDistance.getData|block": "Acquérir les données d'évitement d'obstacles",
   "matrixLidarDistance.getObstacleDistance|block": "Détection de distance en mode évitement d'obstacles %side (mm)",
   "matrixLidarDistance.initialize|block": "Initialiser l'adresse I2C $address du capteur de distance laser en mode matrice $matrix",
-  "matrixLidarDistance.matrixPointOutput|block": "Mesurer la distance du point spécifié en mode matrice x: %x y: %y (mm)",
+  "matrixLidarDistance.matrixPointOutput|block": "$address Mesurer la distance du point spécifié en mode matrice x: %x y: %y (mm)",
   "matrixLidarDistance.obstacleSuggestion|block": "Indication de direction en mode évitement d'obstacles",
   "matrixLidarDistance.setObstacleDistance|block": "Personnaliser la distance d'évitement d'obstacles à $distance (mm)",
   "matrixLidarDistance|block": "Distance LiDAR Matrice"
