--- a/_locales/ko/matrixLidarDistance-strings.json
+++ b/_locales/ko/matrixLidarDistance-strings.json
@@ -12,7 +12,7 @@
   "matrixLidarDistance.getData|block": "장애물 회피 데이터 획득",
   "matrixLidarDistance.getObstacleDistance|block": "장애물 회피 모드 거리 감지 %side (mm)",
   "matrixLidarDistance.initialize|block": "레이저 거리 측정 센서 I2C 주소 $address 매트릭스 모드 $matrix 초기화",
-  "matrixLidarDistance.matrixPointOutput|block": "매트릭스 모드 지정점 거리 측정 x: %x y: %y (mm)",
+  "matrixLidarDistance.matrixPointOutput|block": "$address 매트릭스 모드 지정점 거리 측정 x: %x y: %y (mm)",
   "matrixLidarDistance.obstacleSuggestion|block": "장애물 회피 모드 방향 제시",
   "matrixLidarDistance.setObstacleDistance|block": "장애물 회피 모드 사용자 정의 회피 거리 $distance (mm)",
   "matrixLidarDistance|block": "매트릭스 라이다 거리"
