--- a/_locales/zh-TW/matrixLidarDistance-strings.json
+++ b/_locales/zh-TW/matrixLidarDistance-strings.json
@@ -12,7 +12,7 @@
   "matrixLidarDistance.getData|block": "獲取避障資料",
   "matrixLidarDistance.getObstacleDistance|block": "避障模式 距離檢測 %side (mm)",
   "matrixLidarDistance.initialize|block": "初始化激光測距傳感器 I2C地址 $address $matrix",
-  "matrixLidarDistance.matrixPointOutput|block": "矩陣模式 指定點測距 x: %x y: %y (mm)",
+  "matrixLidarDistance.matrixPointOutput|block": "$address 矩陣模式 指定點測距 x: %x y: %y (mm)",
   "matrixLidarDistance.obstacleSuggestion|block": "避障模式 方向提示",
   "matrixLidarDistance.setObstacleDistance|block": "自訂避障距離 $distance (mm)",
   "matrixLidarDistance|block": "矩陣激光測距"
