--- a/_locales/fr/matrixLidarDistance-jsdoc-strings.json
+++ b/_locales/fr/matrixLidarDistance-jsdoc-strings.json
@@ -1,10 +1,10 @@
 {
   "matrixLidarDistance.emergencyWarning": "Lorsqu'un obstacle est détecté dans un rayon de 100 mm, il émet 1; sinon, il émet 0.",
-  "matrixLidarDistance.getData": "Acquérir les données d'évitement d'obstacles qui ont subi des calculs internes complets une fois. Le mode matrice doit être réglé sur le mode 4*4. Le mode 8*8 causera des erreurs de données ou aucune donnée.",
-  "matrixLidarDistance.getObstacleDistance": "Le bloc fonctionne en mode évitement d'obstacles. Les données ont subi des calculs complets à l'intérieur des données laser de matrice. Il peut détecter les situations d'obstacles dans les directions gauche, centre et droite, ce qui est pratique pour des applications flexibles. Le mode matrice doit être réglé sur le mode 4*4. Le mode 8*8 causera des erreurs de données ou aucune donnée.",
+  "matrixLidarDistance.getData": "Acquérir les données d'évitement d'obstacles qui ont subi des calculs internes complets une fois. ",
+  "matrixLidarDistance.getObstacleDistance": "Le bloc fonctionne en mode évitement d'obstacles. Les données ont subi des calculs complets à l'intérieur des données laser de matrice. Il peut détecter les situations d'obstacles dans les directions gauche, centre et droite, ce qui est pratique pour des applications flexibles.",
   "matrixLidarDistance.getObstacleDistance|param|side": "vers le côté, ex: ObstacleSide.Left",
-  "matrixLidarDistance.initialize": "Initialiser la configuration I2C et la configuration du mode matrice du capteur. En mode évitement d'obstacles, seul le mode 4*4 est pris en charge pour augmenter le taux de trame.",
-  "matrixLidarDistance.matrixPointOutput": "Le bloc fonctionne indépendamment en mode matrice. Il prend en charge les modes 4*4 et 8*8. Il peut lire les valeurs de distance détectées par n'importe lequel des 64 faisceaux laser.",
+  "matrixLidarDistance.initialize": "Initialiser la configuration I2C et la configuration du mode matrice du capteur.",
+  "matrixLidarDistance.matrixPointOutput": "Le bloc fonctionne indépendamment en mode matrice.",
   "matrixLidarDistance.matrixPointOutput|param|x": "vers x, ex: 3",
   "matrixLidarDistance.matrixPointOutput|param|y": "vers y, ex: 3",
   "matrixLidarDistance.obstacleSuggestion": "Selon les paramètres de \"distance d'évitement d'obstacles personnalisée\", lorsqu'un obstacle est détecté à l'avant, suggère les directions de passage possibles. Valeurs de retour: 1 pour le côté gauche, 2 pour le côté droit, 3 pour l'avant.",
