--- a/_locales/nl/matrixLidarDistance-jsdoc-strings.json
+++ b/_locales/nl/matrixLidarDistance-jsdoc-strings.json
@@ -1,10 +1,10 @@
 {
   "matrixLidarDistance.emergencyWarning": "Wanneer een obstakel binnen 100 mm wordt gedetecteerd, wordt 1 uitgevoerd; anders wordt 0 uitgevoerd.",
-  "matrixLidarDistance.getData": "Verkrijg de obstakelvermijdingsgegevens die uitgebreide interne berekeningen hebben ondergaan. De matrixmodus moet worden ingesteld op 4*4-modus. De 8*8-modus veroorzaakt gegevensfouten of geen gegevens.",
-  "matrixLidarDistance.getObstacleDistance": "Het blok werkt in obstakelvermijdingsmodus. De gegevens hebben uitgebreide berekeningen ondergaan binnen de matrix lasergegevens. Het kan obstakelsituaties detecteren in de linker, middelste en rechter richtingen, wat handig is voor flexibele toepassingen. De matrixmodus moet worden ingesteld op 4*4-modus. De 8*8-modus veroorzaakt gegevensfouten of geen gegevens.",
+  "matrixLidarDistance.getData": "Verkrijg de obstakelvermijdingsgegevens die uitgebreide interne berekeningen hebben ondergaan. ",
+  "matrixLidarDistance.getObstacleDistance": "Het blok werkt in obstakelvermijdingsmodus. De gegevens hebben uitgebreide berekeningen ondergaan binnen de matrix lasergegevens. Het kan obstakelsituaties detecteren in de linker, middelste en rechter richtingen, wat handig is voor flexibele toepassingen.",
   "matrixLidarDistance.getObstacleDistance|param|side": "naar kant, bijv: ObstacleSide.Left",
-  "matrixLidarDistance.initialize": "Initialiseer de I2C-configuratie en matrixmodus-configuratie van de sensor. In obstakelvermijdingsmodus wordt alleen de 4*4-modus ondersteund om de framerate te verhogen.",
-  "matrixLidarDistance.matrixPointOutput": "Het blok werkt onafhankelijk in matrixmodus. Het ondersteunt zowel 4*4- als 8*8-modi. Het kan de afstandswaarden lezen die door elk van de 64 laserstralen worden gedetecteerd.",
+  "matrixLidarDistance.initialize": "Initialiseer de I2C-configuratie en matrixmodus-configuratie van de sensor. ",
+  "matrixLidarDistance.matrixPointOutput": "Het blok werkt onafhankelijk in matrixmodus. Het kan de afstandswaarden lezen die door elk van de 64 laserstralen worden gedetecteerd.",
   "matrixLidarDistance.matrixPointOutput|param|x": "naar x, bijv: 3",
   "matrixLidarDistance.matrixPointOutput|param|y": "naar y, bijv: 3",
   "matrixLidarDistance.obstacleSuggestion": "Volgens de instellingen van \"aangepaste obstakelvermijdingsafstand\", wanneer een obstakel aan de voorkant wordt gedetecteerd, suggereert het de mogelijke doorgangsrichtingen. Retourwaarden: 1 voor de linkerkant, 2 voor de rechterkant, 3 voor de voorkant.",
