--- a/_locales/zh-CN/matrixLidarDistance-jsdoc-strings.json
+++ b/_locales/zh-CN/matrixLidarDistance-jsdoc-strings.json
@@ -1,10 +1,10 @@
 {
   "matrixLidarDistance.emergencyWarning": "当检测到距离障碍物100mm内，即输出1，否则输出0 。",
-  "matrixLidarDistance.getData": "获取一次经过内部综合计算的避障相关数据。矩阵模式需设置为4*4模式，8*8模式会导致数据错误或无数据。",
-  "matrixLidarDistance.getObstacleDistance": "该black工作在避障模式。数据经过了内部对矩阵激光数据的综合计算。可检测左中右三个方向的障碍物情况。便于灵活的应用。矩阵模式需设置为4*4模式，8*8模式会导致数据错误或无数据。",
+  "matrixLidarDistance.getData": "获取一次经过内部综合计算的避障相关数据。",
+  "matrixLidarDistance.getObstacleDistance": "该black工作在避障模式。数据经过了内部对矩阵激光数据的综合计算。可检测左中右三个方向的障碍物情况。",
   "matrixLidarDistance.getObstacleDistance|param|side": "to side ,eg: ObstacleSide.Left",
-  "matrixLidarDistance.initialize": "初始化传感器的I2C配置及矩阵模式配置。在避障模式下，为了提高帧率，仅支持4*4模式。",
-  "matrixLidarDistance.matrixPointOutput": "该black是工作在矩阵模式下的独立black，支持4*4和8*8两种模式。可读取任意64个激光束检测到的距离值。",
+  "matrixLidarDistance.initialize": "初始化传感器的I2C配置及矩阵模式配置",
+  "matrixLidarDistance.matrixPointOutput": "该black是工作在矩阵模式下的独立black，可读取任意64个激光束检测到的距离值",
   "matrixLidarDistance.matrixPointOutput|param|x": "to x ,eg: 3",
   "matrixLidarDistance.matrixPointOutput|param|y": "to y ,eg: 3",
   "matrixLidarDistance.obstacleSuggestion": "根据 \"自定义避障距离\" 的设置，当检测到前方有障碍物时，提示可能可以通过的方向。返回值：1左侧，2右侧，3前方",
